--- a/style.css
+++ b/style.css
@@ -34,3 +34,13 @@ background-color: white;
 .email2{
   background-color: blue;
 }
+footer{
+  font-size: 25px;
+  color: white;
+}
+.spanfooter{
+
+font-style: italic;
+font-size: 18px;
+
+}
